--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "private": true,
-  "sideEffects": false,
+  "name": "whi-lucy",
+  "version": "0.0.1",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "scripts": {
     "build": "remix build",
     "dev": "remix dev",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "rollupBuild": "rollup -c --bundleConfigAsCjs",
+    "watch": "rollup -c -w",
+    "rollup": "rollup -c"
   },
+  "types": "./build\\index.d.ts",
   "dependencies": {
     "@emotion/cache": "^11.10.5",
     "@emotion/css": "^11.10.5",
@@ -15,10 +22,24 @@
     "@remix-run/node": "^1.8.2",
     "@remix-run/react": "^1.8.2",
     "@remix-run/vercel": "^1.8.2",
+    "@rollup/plugin-commonjs": "^23.0.4",
+    "@rollup/plugin-image": "^3.0.1",
+    "@rollup/plugin-inject": "^5.0.2",
+    "@rollup/plugin-json": "^5.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@types/styled-components": "^5.1.26",
     "@vercel/node": "^2.6.2",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup": "^3.7.4",
+    "rollup-plugin-alias": "^2.2.0",
+    "rollup-plugin-dts": "^5.0.0",
+    "rollup-plugin-multi-entry": "^2.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
     "styled-components": "^5.3.6",
     "swr": "^2.0.0"
   },
@@ -26,9 +47,14 @@
     "@remix-run/dev": "^1.8.2",
     "@remix-run/eslint-config": "^1.8.2",
     "@remix-run/serve": "^1.8.2",
+    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
+    "react": "^17.0.2",
+    "rollup": "^2.60.0",
+    "rollup-plugin-dts": "^4.0.1",
     "typescript": "^4.8.4"
   },
   "engines": {
