--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "whil-lucy",
+  "name": "@whil/lucy",
   "version": "0.0.1",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
