--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "rollup": "rollup -c"
   },
   "types": "./build\\index.d.ts",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@emotion/cache": "^11.10.5",
     "@emotion/css": "^11.10.5",
