--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "types": "./build\\index.d.ts",
   "author": "",
-  "license": "ISC",
+  "license": "UNLICENSED",
   "dependencies": {
     "@emotion/cache": "^11.10.5",
     "@emotion/css": "^11.10.5",
