--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@whil/lucy",
   "version": "0.0.5",
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
