--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "files": [
     "build"
   ],
+  "types": "./build\\index.d.ts",
   "scripts": {
     "build": "remix build",
     "test": "rollup -c --bundleConfigAsCjs",
@@ -29,11 +30,11 @@
     "@remix-run/node": "^1.8.2",
     "@remix-run/react": "^1.8.2",
     "@remix-run/vercel": "^1.8.2",
-    "@rollup/plugin-commonjs": "^23.0.4",
+    "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-image": "^3.0.1",
-    "@rollup/plugin-inject": "^5.0.2",
-    "@rollup/plugin-json": "^5.0.2",
-    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-inject": "^4.0.4",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.1.3",
     "@types/styled-components": "^5.1.26",
     "@vercel/node": "^2.6.2",
     "postcss": "^8.4.20",
