--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@remix-run/node": "^1.8.2",
     "@remix-run/react": "^1.8.2",
     "@remix-run/vercel": "^1.8.2",
+    "global": "^4.4.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-image": "^3.0.1",
     "@rollup/plugin-inject": "^4.0.4",
